<?xml version="1.0" encoding="utf-8"?>

<!--

    DETERGO (Android App)

    Assessment Activity (Main App Screen)

    This is how the layout for the main screen the user interacts with is defined.
    (To get a better idea on how the layout is defined, open up this file on Android Studio.)

    Start Date: August 5, 2017
    End Date:

    File Name: activity_assessment.xml

    © 2017 Gregory Desrosiers. All rights reserved.

-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.gregpdessch.detergo.AssessmentActivity">

    <TextView
        android:id="@+id/dirtLevelText"
        android:layout_width="325dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:text="@string/amount_of_dirt"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeOfDetergentComboBox"
        app:layout_constraintHorizontal_bias="0.514" />

    <TextView
        android:id="@+id/waterHardnessLevelText"
        android:layout_width="320dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/water_hardness"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dirtLevelComboBox" />

    <TextView
        android:id="@+id/drumOccupancyText"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/drum_occupancy"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drumOccupancyComboBox" />

    <TextView
        android:id="@+id/typeOfDetergentText"
        android:layout_width="328dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:text="@string/type_of_detergent"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/typeOfDetergentComboBox"
        android:layout_width="236dp"
        android:layout_height="29dp"
        android:entries="@array/drum_occupancy_combo_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/drumOccupancyText" />

    <Spinner
        android:id="@+id/drumOccupancyComboBox"
        android:layout_width="132dp"
        android:layout_height="25dp"
        android:entries="@array/type_of_detergent_combo_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/typeOfDetergentText" />

    <Spinner
        android:id="@+id/dirtLevelComboBox"
        android:layout_width="236dp"
        android:layout_height="29dp"
        android:entries="@array/dirt_level_combo_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dirtLevelText" />

    <Spinner
        android:id="@+id/waterHardnessLevelComboBox"
        android:layout_width="324dp"
        android:layout_height="24dp"
        android:entries="@array/water_hardness_combo_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/waterHardnessLevelText" />

    <Button
        android:id="@+id/button"
        android:layout_width="126dp"
        android:layout_height="0dp"
        android:text="@string/calculate_button"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/waterHardnessLevelComboBox"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp" />

</android.support.constraint.ConstraintLayout>
